--- a/src/app.html
+++ b/src/app.html
@@ -6,10 +6,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body>
+		<header>
+			<div class="header">
+		<h1> How much better is Erling Braut Haaland than other Premier League attackers?</h1>
+		<p>
+			Over the last few years, we have seen some incredible strikers in the Premier League. But
+			none have matched the goal-scoring prowess of Erling Braut Haaland. In this data visualization I want to show you just how much better Haaland is compared to other top attackers in the league.
+		</p>
+		<blockquote>
+			"Erling Haaland is the greatest goalscorer to ever play in English football", says Jamie Carragher. — Sky Sports
+		</blockquote>
+		<p><a href="https://www.skysports.com/football/news/29327/13445690/erling-haaland-man-city-striker-is-english-footballs-greatest-goalscorer-ever-says-jamie-carragher" target="_blank" rel="noopener">Source: Sky Sports article</a></p>
+			</div>
+		</header>
 		<div style="display: contents">%sveltekit.body%</div>
-		<svg id="Chart">
-			<g></g>
-		</svg>
 	</body>
 </html>
